test/gen/err006.go2
// errorcheck

// Copyright 2020 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// Issue 39743.
package p

type S[type T] struct{}

func (s S[_]) M() {}	// ERROR "_"

func F() {
	S[int]{}.M()
}
